monitoring/CiliumNetworkPolicy-grafana.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: longhorn-manager
      toPorts:
        - ports:
            - port: "9500"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kubernetes-ingress
            io.kubernetes.pod.namespace: haproxy
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
